# irrigation-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: configuracoes.json  historico.json  history.json  schedules.json  settings.json  valves.json  valvulas.json
deploy/: package-readme.md
docs/: COMPONENTS_GUIDE.md  DEVELOPER_GUIDE.md
node-red/: flows.json  settings.js
scripts/: build-binary.sh  instalar-raspberry.sh  install-raspberry.sh  sync_flows_templates.py
tasks/: 011-fix-new-schedule-page-missing-sidebar.md  014-show-running-schedule-remaining-time.md  015-reflect-real-system-online-status.md  016-authentication-and-password-management.md  017-warn-when-deleting-running-schedule.md  022-reset-password-to-default.md  024-harden-session-lifecycle.md  025-add-tls-and-secure-cookies.md  026-rate-limit-dashboard-login.md  027-enforce-default-credential-change.md  028-restrict-node-red-editor-access.md  029-optimize-history-retention-and-active-lookups.md  030-reduce-dashboard-process-spawning.md  031-standardize-section-picker-as-select.md  032-limit-history-retention-to-one-week.md  033-classify-restarts-and-restore-gpio.md  035-add-sensor-configuration-section.md  036-add-reservoir-level-sensor.md  037-add-water-flow-sensor.md  038-add-soil-moisture-sensors.md  039-add-line-pressure-sensor.md  040-add-rain-sensor.md  042-restrict-valve-section-pins.md  template.md
tests/: test_cli.py  test_deployment.py  test_json_migration.py  test_migration.py  (+8 more)
(+67 files in other folders)
