[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "irrigation-system"
version = "1.0.0"
description = "Automated irrigation system for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
raspberry = ["RPi.GPIO==0.7.1"]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]
build = ["nuitka>=2.4,<3"]

[project.scripts]
irrigation = "irrigation.cli:execute"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
